codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__profile_permissions_selection_popup_with_disallowed_full_access.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Update Model Permissions


  1. Ask for approval        Read and edit workspace files and run commands,
                             with approval required for internet access or edits
                             outside the workspace
  2. Approve for me          Only ask for actions detected as potentially unsafe
     Full Access (disabled)  Use with caution: ASM can edit files outside this
                             workspace and access the internet without approval
                             (disabled: Disabled by requirements)
› 3. Read Only (current)     Read workspace files, with approval required for
                             edits or internet access

  enter select · esc back
